# COMP0119_20-21

./: .gitignore  .gitmodules  README.md
cmake/: FindLIBIGL.cmake
course_work_1/: README.md
course_work_2/: README.md
coursework_resources/course_work_1/halfedge-mesh-test-meshes/: igea11706.off
cpp_lib/nanoflann/: KDTreeVectorOfVectorsAdaptor.h
demos/: saddle_exercise.ggb
deprecated/cpp-instructions/1_install/: README.md
deprecated/cpp-instructions/3_travel/: CMakeLists.txt
deprecated/cpp-instructions/3_travel/src/: main.cpp
deprecated/cpp-instructions/4_polyscope/: README.md
lab_demos/Tutorial 1 -  coding_framework/: README.md
lab_demos/Tutorial 1 -  coding_framework/python/1_install/: README.md  halfedge_test.ipynb  hello_world_o3d.py  test.off  (+2 more)
lab_demos/Tutorial 1 - coding_framework/: README.md
lab_demos/Tutorial 2 - Space Partition and Normal Estimation/: NormalEstimation-Solution.ipynb  NormalEstimation-not-solved.ipynb
lab_demos/Tutorial 3 - Halfedge Mesh Data Structure/: Halfedge-v3-not-solved.ipynb  Halfedge-v3.ipynb  my_tetrahedron.off  my_triangle.off  sphere0.off  sphere4.off
lab_demos/geogebra-demos/: TA_exercise.ggb  TA_guided.ggb  surfaces.ggb
python_lib/geo_tools/: rd_helper.py
python_lib/halfedge_mesh/: __init__.py  halfedge_mesh.py
tutorials/Tutorial 2 - Space Partition and Normal Estimation/: NormalEstimation-Solution.ipynb  NormalEstimation-not-solved.ipynb  NormalEstimation.ipynb
tutorials/Tutorial 3 - Halfedge Mesh Data Structure/: Halfedge-v2-solutions.ipynb  sphere1.off
tutorials/coding_framework/: README.md
(+24 files in other folders)
